@@ -71,44 +71,46 @@ public class CandidatureServiceImpl implements CandidatureService {
     private final UtilisateurRepository utilisateurRepository;
     private final UtilisateurMapper utilisateurMapper;
 
+    /**
+     * Date limite de dépôt des candidatures (format ISO-8601).
+     * À configurer dans application.properties :
+     *   app.date-limite-candidature=2025-06-30
+     */
+    @Value("${app.date-limite-candidature}")
+    private LocalDate dateLimiteCandidature;
+
+    // TO BE FIXED: save entretien date somewhere if needed
     @Override
     public CandidatureResponseDTO accepterCandidature(Long candidatureId, LocalDate entretien) {
         Candidature candidature = candidatureRepository.findById(candidatureId)
-                .orElseThrow(() -> new ResponseStatusException(404, "Candidature introuvable", null));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidature introuvable"));
 
         candidature.setStatutCandidature(CandidatureEnum.ACCEPTER);
-        return candidatureMapper.toResponseDTO(candidatureRepository.save(candidature));
+        // TODO: save entretien date into candidature if entity has a field for it
+        Candidature saved = candidatureRepository.save(candidature);
+        return candidatureMapper.toResponseDTO(saved);
     }
 
     @Override
     public CandidatureResponseDTO refuserCandidature(Long candidatureId, String motif) {
         Candidature candidature = candidatureRepository.findById(candidatureId)
-                .orElseThrow(() -> new ResponseStatusException(404, "Candidature introuvable", null));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidature introuvable"));
 
         candidature.setStatutCandidature(CandidatureEnum.REFUSER);
-        // Le champ "motif" peut être ajouté dans l’entité si besoin
-        return candidatureMapper.toResponseDTO(candidatureRepository.save(candidature));
+        // TODO: if you add a "motifRefus" field on Candidature, set it here
+        Candidature saved = candidatureRepository.save(candidature);
+        return candidatureMapper.toResponseDTO(saved);
     }
 
     @Override
     public void fermerEtArchiverCompteCandidat(Long candidatId) {
         Candidat candidat = candidatRepository.findById(candidatId)
-                .orElseThrow(() -> new ResponseStatusException(404, "Candidat introuvable", null));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidat introuvable"));
 
         candidat.setArchiver(true);
         candidatRepository.save(candidat);
-        // suppression après délai (automatisée par tâche cron ou batch)
+        // Tout nettoyage supplémentaire ou suppression après délai peut être adapté ici
     }
-
-    /**
-     * Date limite de dépôt des candidatures (format ISO-8601).
-     * À configurer dans application.properties :
-     * app.date-limite-candidature=2025-06-30
-     */
-    @Value("${app.date-limite-candidature}")
-    private LocalDate dateLimiteCandidature;
-
-    // LOCATION DE STOCKAGE 
 
     // =====================================================================
     // Création d’une nouvelle candidature
@@ -116,28 +118,33 @@ public class CandidatureServiceImpl implements CandidatureService {
     @Override
     @Transactional
     public CandidatureResponseDTO createCandidature(CandidatureRequestDTO dto, UserDetails userDetails) {
-        // 0. CHECK
-        Candidat cnd = candidatRepository.findByUtilisateurEmail(userDetails.getUsername()).orElse(null);
-        if (cnd != null) {
+        // 1. Vérifier qu’il n’y a pas déjà de candidature en cours pour cet utilisateur
+        Candidat existingCnd = candidatRepository.findByUtilisateurEmail(userDetails.getUsername())
+                .orElse(null);
+        if (existingCnd != null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
                     "Vous avez déjà une candidature en cours. Veuillez la modifier plutôt que d'en créer une nouvelle.");
-        }        
-        // 1. Récupérer le candidat à partir de l'email authentifié modifier si necessaire
-        Utilisateur newCandidat = utilisateurRepository.findByEmail(userDetails.getUsername())
+        }
+
+        // 2. Récupérer l’utilisateur authentifié (nouveau candidat)
+        Utilisateur utilisateur = utilisateurRepository.findByEmail(userDetails.getUsername())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Utilisateur introuvable"));
 
-                // TAKE INTO CONSIDERATION THE CHANGES ON POSTULER
-        UtilisateurRequestDTO utilisateurRequestDTO = (UtilisateurRequestDTO) dto;
-        newCandidat = utilisateurMapper.UpdateUtilisateurFromRequestDTO(newCandidat, utilisateurRequestDTO);
-        utilisateurRepository.save(newCandidat);
-        // 2. Vérifier la date limite
+        // 3. Mettre à jour l’utilisateur si des champs UtilisateurRequestDTO sont fournis dans le DTO
+        if (dto instanceof UtilisateurRequestDTO) {
+            UtilisateurRequestDTO utilisateurRequestDTO = (UtilisateurRequestDTO) dto;
+            utilisateur = utilisateurMapper.UpdateUtilisateurFromRequestDTO(utilisateur, utilisateurRequestDTO);
+            utilisateurRepository.save(utilisateur);
+        }
+
+        // 4. Vérifier la date limite
         if (LocalDate.now().isAfter(dateLimiteCandidature)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Date limite de candidature dépassée");
         }
 
-        // 3. Valider le fichier zip
+        // 5. Valider le fichier ZIP
         MultipartFile file = dto.getDossierCandidature();
-        if (file.isEmpty()) {
+        if (file == null || file.isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le fichier de candidature est vide.");
         }
         String extension = fileService.getFileExtension(file.getOriginalFilename());
@@ -145,7 +152,7 @@ public class CandidatureServiceImpl implements CandidatureService {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le dossier doit être un fichier .zip");
         }
 
-        // 4. Vérifier le nombre de sujets transmis
+        // 6. Vérifier le nombre de sujets
         if (dto.getSujetsIds() == null || dto.getSujetsIds().isEmpty()) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Vous devez sélectionner au moins un sujet");
         }
@@ -154,26 +161,25 @@ public class CandidatureServiceImpl implements CandidatureService {
                     "Vous ne pouvez sélectionner que 3 sujets au maximum");
         }
 
-        // 5. Stocker le fichier dans uploads/candidatures/{candidatId}/
+        // 7. Sauvegarder le ZIP dans /uploads/candidatures/{utilisateurId}/
         String dossierPath;
         try {
-            dossierPath = fileService.storeFile(
-                    file,
-                    "candidatures/" + newCandidat.getId());
+            dossierPath = fileService.storeFile(file, "candidatures/" + utilisateur.getId());
         } catch (IOException e) {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
                     "Erreur lors de l’enregistrement du fichier");
         }
 
-        // 6. Enregister le nouveau candidat puis Construire l’entité Candidature
-
-        Candidat savedCnd = Candidat.builder()
-                .utilisateur(newCandidat)
-                .archiver(false) // par défaut, le candidat n'est pas archivé
+        // 8. Créer l’entité Candidat + Candidature
+        Candidat nouveauCandidat = Candidat.builder()
+                .utilisateur(utilisateur)
+                .archiver(false)
                 .build();
-        candidatService.saveCandidat(savedCnd);
+        // Use repository directly because candidatService.saveCandidat(...) returns DTO
+        Candidat savedCandidat = candidatRepository.save(nouveauCandidat);
+
         Candidature candidature = Candidature.builder()
-                .statutCandidature(CandidatureEnum.SOUMISE) // statut forcé
+                .statutCandidature(CandidatureEnum.SOUMISE)
                 .mentionBac(dto.getMentionBac())
                 .mentionDiplome(dto.getMentionDiplome())
                 .dossierCandidature(dossierPath)
@@ -181,11 +187,11 @@ public class CandidatureServiceImpl implements CandidatureService {
                 .typeEtablissement(dto.getTypeEtablissement())
                 .specialite(dto.getSpecialite())
                 .intitulePFE(dto.getIntitulePFE())
-                .candidat(savedCnd)
-                .sujets(null) // on gère la relation sujets juste après
+                .candidat(savedCandidat)
+                .sujets(null) // on définit ensuite
                 .build();
 
-        // 7. Lier les sujets sélectionnés
+        // 9. Lier les sujets sélectionnés
         List<Sujet> sujetsChoisis = dto.getSujetsIds().stream()
                 .map(idSujet -> sujetRepository.findById(idSujet)
                         .orElseThrow(() -> new ResponseStatusException(
@@ -193,19 +199,18 @@ public class CandidatureServiceImpl implements CandidatureService {
                 .collect(Collectors.toList());
         candidature.setSujets(sujetsChoisis);
 
-        // 8. Sauvegarder la candidature
+        // 10. Sauvegarder la candidature
         Candidature saved = candidatureRepository.save(candidature);
 
-        // 9. Retourner le DTO
+        // 11. Retourner le DTO
         return candidatureMapper.toResponseDTO(saved);
     }
 
     @Override
     public List<EquipeSimpleDTO> getAllEquipes() {
-        return equipeDeRechercheRepository.findAll()
-                .stream()
+        return equipeDeRechercheRepository.findAll().stream()
                 .map(equipeMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -213,7 +218,7 @@ public class CandidatureServiceImpl implements CandidatureService {
         return sujetRepository.findAll().stream()
                 .filter(Sujet::isEstPublic)
                 .map(sujetMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -222,14 +227,14 @@ public class CandidatureServiceImpl implements CandidatureService {
                 .filter(p -> p.getEquipeDeRechercheAcceuillante() != null
                         && p.getEquipeDeRechercheAcceuillante().getId().equals(equipeId))
                 .map(professeurMapper::toSimpleDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<SujetResponseDTO> getSujetsByEquipeId(Long equipeId) {
         return sujetRepository.findByChefEquipeId(equipeId).stream()
                 .map(sujetMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // =====================================================================
@@ -237,10 +242,6 @@ public class CandidatureServiceImpl implements CandidatureService {
     // =====================================================================
     @Override
     public List<CandidatureResponseDTO> getCandidaturesByChefEquipeId(Long chefEquipeId) {
-        // Suppose que ChefEquipeService offre une méthode pour récupérer la liste de
-        // tous les sujets d’une équipe.
-        // Ensuite on cherche dans candidatureRepository toutes les candidatures qui
-        // contiennent un sujet de cette équipe.
         return candidatureRepository.findAll().stream()
                 .filter(cand -> cand.getSujets().stream()
                         .anyMatch(sujet -> sujet.getChefEquipe().getId().equals(chefEquipeId)))
@@ -251,10 +252,10 @@ public class CandidatureServiceImpl implements CandidatureService {
     @Override
     public void propositionSujet(Long professeurId, Long sujetId) {
         Professeur professeur = professeurRepository.findById(professeurId)
-                .orElseThrow(() -> new ResponseStatusException(404, "Professeur introuvable", null));
+                                .orElseThrow(() -> new ResponseStatusException(404, "Professeur introuvable", null));
 
         Sujet sujet = sujetRepository.findById(sujetId)
-                .orElseThrow(() -> new ResponseStatusException(404, "Sujet introuvable", null));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Sujet introuvable"));
 
         sujet.getProfesseurs().add(professeur);
         sujetRepository.save(sujet);
@@ -274,29 +275,27 @@ public class CandidatureServiceImpl implements CandidatureService {
     @Transactional
     public void archiverCandidatsRefuses() {
         LocalDate oneMonthAgo = LocalDate.now().minusMonths(1);
-        // On récupère toutes les candidatures refusées avant oneMonthAgo
+        // Filtrer sur createdAt ou dateRefus si vous l’ajoutez à l’entité
         List<Candidature> refusesAnciens = candidatureRefuserRepository
                 .findByStatutCandidatureAndDateRefusBefore(CandidatureEnum.REFUSER, oneMonthAgo);
 
         for (Candidature c : refusesAnciens) {
             Long candidatId = c.getCandidat().getId();
-            // On archive le candidat
             candidatService.archiverCandidat(candidatId);
         }
     }
 
     // =====================================================================
     // Basculer automatiquement SOUMISE → EN_COURS_DE_TRAITEMENT
-    // (tâche planifiée à minuit chaque jour)
     // =====================================================================
     @Override
     @Scheduled(cron = "0 0 0 * * ?") // Tous les jours à minuit
     @Transactional
     public void basculerStatutEnCoursTraitement() {
-        // On bascule toutes les candidatures créées avant ou à la date limite et qui
-        // restent en SOUMISE
-        List<Candidature> soumises = candidatureRepository.findByStatutCandidatureAndCreatedAtBefore(
-                CandidatureEnum.SOUMISE, dateLimiteCandidature.atStartOfDay().toLocalDate());
+        List<Candidature> soumises = candidatureRepository
+                .findByStatutCandidatureAndCreatedAtBefore(
+                        CandidatureEnum.SOUMISE,
+                        dateLimiteCandidature);
         for (Candidature c : soumises) {
             c.setStatutCandidature(CandidatureEnum.EN_COURS_DE_TRAITEMENT);
         }
@@ -304,15 +303,12 @@ public class CandidatureServiceImpl implements CandidatureService {
     }
 
     // =====================================================================
-    // Consultation / Suivi du statut de la candidature par le candidat
+    // Suivi du statut de la candidature par le candidat
     // =====================================================================
     @Override
     public List<CandidatureResponseDTO> getMyCandidatures(UserDetails userDetails) {
-        // 1. Récupérer le candidat à partir de l’email (UserDetails)
         Candidat candidat = candidatService.findFullCandidatByEmail(userDetails.getUsername());
-        // 2. Récupérer toutes les candidatures
         List<Candidature> list = candidatureRepository.findByCandidat(candidat);
-        // 3. Convertir en DTO
         return list.stream()
                 .map(candidatureMapper::toResponseDTO)
                 .collect(Collectors.toList());
@@ -328,43 +324,39 @@ public class CandidatureServiceImpl implements CandidatureService {
         Candidature existing = candidatureRepository.findById(candidatureId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidature introuvable"));
 
-        // 1. Vérifier le propriétaire
+        // Vérifier que l’email du propriétaire correspond à l’utilisateur authentifié
         if (!existing.getCandidat().getUtilisateur().getEmail().equals(userDetails.getUsername())) {
             throw new AccessDeniedException("Accès refusé : vous n’êtes pas le propriétaire de cette candidature.");
         }
 
-        // 2. Vérifier la date limite
+        // Vérifier la date limite
         if (LocalDate.now().isAfter(dateLimiteCandidature)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
                     "Date limite de candidature dépassée. Impossible de modifier.");
         }
 
-        // 3. Mettre à jour les champs modifiables :
+        // Mettre à jour les champs modifiables
         existing.setMentionBac(dto.getMentionBac());
         existing.setMentionDiplome(dto.getMentionDiplome());
         existing.setTypeEtablissement(dto.getTypeEtablissement());
         existing.setSpecialite(dto.getSpecialite());
         existing.setIntitulePFE(dto.getIntitulePFE());
 
-        // 4. Si le candidat envoie un nouveau fichier, remplacer l’ancien
+        // Remplacement du fichier ZIP si nécessaire
         MultipartFile nouveauFichier = dto.getDossierCandidature();
         if (nouveauFichier != null && !nouveauFichier.isEmpty()) {
-            // 4.a) Supprimer l’ancien fichier (on capture IOException)
             try {
                 fileService.deleteFile(existing.getDossierCandidature());
             } catch (IOException e) {
-                // On transforme en ResponseStatusException 500 pour que Spring renvoie HTTP 500
                 throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
                         "Erreur lors de la suppression de l’ancien dossier de candidature", e);
             }
 
-            // 4.b) Valider l’extension du nouveau fichier
             String extension = fileService.getFileExtension(nouveauFichier.getOriginalFilename());
             if (extension == null || !extension.equalsIgnoreCase("zip")) {
                 throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Le dossier doit être un fichier .zip");
             }
 
-            // 4.c) Stocker le nouveau fichier (on capture également IOException)
             String newPath;
             try {
                 newPath = fileService.storeFile(nouveauFichier, "candidatures/" + existing.getCandidat().getId());
@@ -375,7 +367,7 @@ public class CandidatureServiceImpl implements CandidatureService {
             existing.setDossierCandidature(newPath);
         }
 
-        // 5. Mettre à jour la liste des sujets si fourni
+        // Mise à jour des sujets si fournis
         if (dto.getSujetsIds() != null && !dto.getSujetsIds().isEmpty()) {
             List<Sujet> nouveauxSujets = dto.getSujetsIds().stream()
                     .map(idSujet -> sujetRepository.findById(idSujet)
@@ -385,8 +377,42 @@ public class CandidatureServiceImpl implements CandidatureService {
             existing.setSujets(nouveauxSujets);
         }
 
-        // 6. Sauvegarder
         Candidature updated = candidatureRepository.save(existing);
         return candidatureMapper.toResponseDTO(updated);
+    }
+
+    @Override
+    public CandidatureResponseDTO getCandidatureById(Long candidatureId, UserDetails userDetails) {
+        Candidature candidature = candidatureRepository.findById(candidatureId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidature introuvable"));
+
+        String emailConnecte = userDetails.getUsername();
+        if (!candidature.getCandidat().getUtilisateur().getEmail().equals(emailConnecte)) {
+            throw new AccessDeniedException("Accès refusé : vous ne pouvez consulter que vos propres candidatures.");
+        }
+
+        return candidatureMapper.toResponseDTO(candidature);
+    }
+
+    @Override
+    public void deleteCandidature(Long candidatureId, UserDetails userDetails) {
+        Candidature candidature = candidatureRepository.findById(candidatureId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Candidature introuvable"));
+
+        String emailConnecte = userDetails.getUsername();
+        if (!candidature.getCandidat().getUtilisateur().getEmail().equals(emailConnecte)) {
+            throw new AccessDeniedException("Accès refusé : vous ne pouvez supprimer que vos propres candidatures.");
+        }
+
+        String cheminFichier = candidature.getDossierCandidature();
+        if (cheminFichier != null && !cheminFichier.isBlank()) {
+            try {
+                fileService.deleteFile(cheminFichier);
+            } catch (IOException e) {
+                // Ignorer l’erreur, continuer la suppression en base
+            }
+        }
+
+        candidatureRepository.delete(candidature);
     }
 }
